Reformat WorldTest.java
- Optimize/re-order imports, via std Intellij IDE auto formatter settings.
- Reformat/standardize indentation & white-spacing, via std Intellij IDE
  auto formatter settings.